Bower setup and first chat connection

--- a/public/client.html
+++ b/public/client.html
@@ -1,10 +1,48 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Client</title>
-</head>
-<body>
-Client
-</body>
+<html lang="{{ language }}" ng-app="toolboxHtmlBattleClient" ng-controller="AppController">
+    <head>
+        <meta charset="UTF-8">
+        <title>bower ins</title>
+
+
+        <!-- External css -->
+        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/bootstrap-material-design.css" />
+        <!--<link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/ripples.css" />-->
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
+        <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons" />
+        <link rel="stylesheet" type="text/css" href="bower_components/components-font-awesome/css/font-awesome.css" />
+        <link rel="stylesheet" type="text/css" href="bower_components/font-awesome-animation/dist/font-awesome-animation.css">
+        <link rel="stylesheet" type="text/css" href="bower_components/snackbarjs/dist/snackbar.css" />
+
+        <!-- Bower components -->
+        <script type="text/javascript" src="bower_components/tether/dist/js/tether.min.js"></script>
+        <script type="text/javascript" src="bower_components/arrive/src/arrive.js"></script>
+        <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
+        <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+        <!--<script type="text/javascript" src="bower_components/bootstrap-material-design/dist/js/material.js"></script>-->
+        <!--<script type="text/javascript" src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>-->
+        <script type="text/javascript" src="bower_components/angular/angular.js"></script>
+        <script type="text/javascript" src="bower_components/angular-bootstrap-material/angular-bootstrap-material.js"></script>
+        <script type="text/javascript" src="bower_components/angular-clipboard/angular-clipboard.js"></script>
+        <script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+        <script type="text/javascript" src="bower_components/angular-socket-io/socket.js"></script>
+        <script type="text/javascript" src="bower_components/angular-translate/angular-translate.js"></script>
+        <script type="text/javascript" src="bower_components/moment/moment.js"></script>
+        <script type="text/javascript" src="bower_components/ng-idle/angular-idle.js"></script>
+        <script type="text/javascript" src="bower_components/socket.io-client/socket.io.js"></script>
+        <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
+
+
+
+        <script type="text/javascript" src="clientApp.js"></script>
+        <script type="text/javascript" src="clientAppController.js"></script>
+        <script type="text/javascript" src="socket.js"></script>
+
+
+
+    </head>
+    <body>
+    hi
+    </body>
 </html>
