Client now sends source code

--- a/public/client.html
+++ b/public/client.html
@@ -54,13 +54,13 @@
 
 
 HTML:
-        <textarea ng-model="htmlInput">
+        <textarea ng-model="sourceCode.html">
 
 
 
         </textarea>
 CSS:
-        <textarea ng-model="cssInput">
+        <textarea ng-model="sourceCode.css">
 
 
 
