Fixed the bootstrap material design version

--- a/public/client.html
+++ b/public/client.html
@@ -7,8 +7,8 @@
 
         <!-- External css -->
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css" />
-        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/bootstrap-material-design.css" />
-        <!--<link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/ripples.css" />-->
+        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
+        <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/css/ripples.css" />
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" />
         <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/icon?family=Material+Icons" />
         <link rel="stylesheet" type="text/css" href="bower_components/components-font-awesome/css/font-awesome.css" />
@@ -21,8 +21,8 @@
         <script type="text/javascript" src="bower_components/arrive/src/arrive.js"></script>
         <script type="text/javascript" src="bower_components/jquery/dist/jquery.js"></script>
         <script type="text/javascript" src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-        <!--<script type="text/javascript" src="bower_components/bootstrap-material-design/dist/js/material.js"></script>-->
-        <!--<script type="text/javascript" src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>-->
+        <script type="text/javascript" src="bower_components/bootstrap-material-design/dist/js/material.js"></script>
+        <script type="text/javascript" src="bower_components/bootstrap-material-design/dist/js/ripples.js"></script>
         <script type="text/javascript" src="bower_components/angular/angular.js"></script>
         <script type="text/javascript" src="bower_components/angular-bootstrap-material/angular-bootstrap-material.js"></script>
         <script type="text/javascript" src="bower_components/angular-clipboard/angular-clipboard.js"></script>
