--- a/public/client.html
+++ b/public/client.html
@@ -49,14 +49,40 @@
 
     </head>
     <body>
+        <div class="navbar navbar-warning">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-warning-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <strong class="navbar-text">Toolbox HTML-Battle</strong>
+                </div>
+                <div class="navbar-collapse collapse navbar-warning-collapse">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <span class="navbar-text">Status:
+                                <span ng-if="connected">Verbunden</span>
+                                <span ng-if="!connected">Nicht verbunden</span>
+                            </span>
+                        </li>
+                        <li class="navbar-text" ng-click="usernameClicked()" role="button">
+                            Du bist: {{ clientId }} <span ng-if="username">({{ username }})</span>
+                        </li>
+                    </ul>
+                    <ul class="nav navbar-nav navbar-right">
+                        <li><span class="navbar-text">Punkte: <span ng-model="points">0</span></span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
 
 
-    status: <span ng-if="connected">connected</span>  <span ng-if="!connected">not connected</span>
 
-<br>
-    id: <span>{{ clientId }}</span>
 
-preview
+
+
 
 
     <div class="form-group">
