Enabled support for locking

--- a/public/client.html
+++ b/public/client.html
@@ -158,6 +158,8 @@
                 </div>
             </div>
         </div>
-
+        <div id="lockOverlay" ng-show="locked">
+            Bearbeitung gesperrt
+        </div>
     </body>
 </html>
