--- a/public/client.html
+++ b/public/client.html
@@ -4,7 +4,6 @@
         <meta charset="UTF-8">
         <title>Toolbox HTML Battle Client</title>
 
-
         <!-- External css -->
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-material-design/dist/css/bootstrap-material-design.css" />
@@ -37,16 +36,12 @@
         <script type="text/javascript" src="bower_components/socket.io-client/socket.io.js"></script>
         <script type="text/javascript" src="bower_components/underscore/underscore.js"></script>
 
-
-
+        <!-- App -->
         <script type="text/javascript" src="clientApp.js"></script>
         <script type="text/javascript" src="clientAppController.js"></script>
         <script type="text/javascript" src="clientIdProvider.js"></script>
         <script type="text/javascript" src="clientTypeProvider.js"></script>
         <script type="text/javascript" src="socket.js"></script>
-
-
-
     </head>
     <body>
         <div class="navbar navbar-warning">
