Enabled syntax highlighting

--- a/public/client.html
+++ b/public/client.html
@@ -100,6 +100,7 @@
                         ui-ace="
                         {
                             useWrapMode: true,
+                            mode:        'html',
                             showGutter:  true,
                             theme:       'chrome',
                             onChange:    sourceCodeChanged,
@@ -128,6 +129,7 @@
                         {
                             useWrapMode: true,
                             showGutter:  true,
+                            mode:        'css',
                             theme:       'chrome',
                             onChange:    sourceCodeChanged,
                         }"
