--- a/public/beamer.html
+++ b/public/beamer.html
@@ -89,6 +89,7 @@
                                 <ul class="nav navbar-nav">
                                     <li>
                                         <span class="navbar-text">{{ data.name || remoteClientId }} ({{ data.points || '0'}} ✪)</span>
+                                        <i title="Punkte hinzufügen" class="fa fa-plus" aria-hidden="true" ng-show="admin" ng-click="addPoints(remoteClientId)"></i>
                                     </li>
                                 </ul>
                             </div>
@@ -103,6 +104,9 @@
                 <div class="navbar-collapse collapse navbar-warning-collapse">
                     <ul class="nav navbar-nav">
                         <li>
+                            <a ng-click="fullResetButtonPressed()">Alles zurücksetzen</a>
+                        </li>
+                        <li>
                             <a ng-click="clearCodeButtonPressed()">Code löschen</a>
                         </li>
                         <li>
@@ -110,6 +114,9 @@
                         </li>
                         <li>
                             <a ng-click="disableLockButtonPressed()">Sperre deaktivieren</a>
+                        </li>
+                        <li>
+                            <a ng-click="setQuestButtonPressed()">Aufgabe setzen</a>
                         </li>
                     </ul>
                 </div>
