Show points on the top right of the screen

--- a/public/client.html
+++ b/public/client.html
@@ -68,7 +68,7 @@
                         </li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right" title="Punkte">
-                        <li><span class="navbar-text"><span ng-model="points">0</span> ✪</span></li>
+                        <li><span class="navbar-text"><span ng-model="points">{{ points }}</span> ✪</span></li>
                     </ul>
                 </div>
             </div>
