--- a/public/beamer.html
+++ b/public/beamer.html
@@ -26,6 +26,7 @@
         <script type="text/javascript" src="bower_components/angular-bootstrap-material/angular-bootstrap-material.js"></script>
         <script type="text/javascript" src="bower_components/angular-clipboard/angular-clipboard.js"></script>
         <script type="text/javascript" src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+        <script type="text/javascript" src="bower_components/angular-sanitize/angular-sanitize.js"></script>
         <script type="text/javascript" src="bower_components/angular-socket-io/socket.js"></script>
         <script type="text/javascript" src="bower_components/angular-translate/angular-translate.js"></script>
         <script type="text/javascript" src="bower_components/angular-uuid/uuid.js"></script>
